--- a/TranslationReg/Views/Documents/List.cshtml
+++ b/TranslationReg/Views/Documents/List.cshtml
@@ -50,10 +50,10 @@
             </div>
             <div class="col-md-2">
                 <div class="icons-container">
-                    <a href="/Documents/Edit/@document.Id">
+                    <a data-href="/Documents/Edit/@document.Id" class="loadModal">
                         <i class="material-icons">mode_edit</i>
                     </a>
-                    <a data-href="/Documents/Delete/@document.Id" class="loadModal" data-dialog-title="Удаление документа и работ">
+                    <a data-href="/Documents/Delete/@document.Id" class="loadModal">
                         <i class="material-icons">delete</i>
                     </a>
                 </div>
