--- a/TranslationReg/Views/User_Stage/Edit.cshtml
+++ b/TranslationReg/Views/User_Stage/Edit.cshtml
@@ -12,7 +12,7 @@
 
             <!-- Тело -->
             <div class="modal-body">
-                <h3>Вы уверены, что хотите удалить данную запись?</h3>
+                <h3>Вы уверены, что хотите изменить данную запись?</h3>
 
                 @Html.AntiForgeryToken()
 
