--- a/TranslationReg/Views/Documents/Edit.cshtml
+++ b/TranslationReg/Views/Documents/Edit.cshtml
@@ -1,49 +1,68 @@
 ﻿@model TranslationRegistryModel.Document
 
-@{ViewBag.Title = "Редактирование документа";}
+<div class="modal-dialog">
+    <div class="modal-content">
+        @using (Html.BeginForm("Edit", "Documents", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
+            @Html.HiddenFor(model => model.OwnerId)
+            @Html.HiddenFor(model => model.OriginalFileId)
+            @Html.HiddenFor(model => model.FinalFileId)
+            @Html.HiddenFor(model => model.Date)
 
-<h2>Редактирование документа</h2>
+            <!-- Хедер -->
+            <div class="modal-header  edit-header">
+                <h4 class="modal-title">Редактирование документа</h4>
+                <p type="button" class="close" data-dismiss="modal">&times;</p>
+            </div>
 
-<div class="dynamic-block-create">
-    @using (Html.BeginForm("Edit", "Documents", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-        @Html.AntiForgeryToken()
+            <!-- Тело -->
+            <div class="modal-body">
+                <h3>Вы уверены, что хотите изменить данную запись?</h3>
 
+                <div class="modal-row">
+                    <div class="modal-property"><p>Создатель:</p></div>
+                    <div class="modal-value">
+                        @Html.EditorFor(model => model.Owner.Name, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                    </div>
+                </div>
 
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
-        @Html.HiddenFor(model => model.OwnerId)
-        @Html.HiddenFor(model => model.OriginalFileId)
-        @Html.HiddenFor(model => model.FinalFileId)
-        @Html.HiddenFor(model => model.Date)
-        <div class="form-group">
-            @Html.LabelFor(model => model.Owner, "Создатель")
-            @Html.EditorFor(model => model.Owner.Name, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-        </div>
+                <div class="modal-row">
+                    <div class="modal-property"><p>Название:</p></div>
+                    <div class="modal-value">
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, "Название")
-            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-        </div>
+                <div class="modal-row">
+                    <div class="modal-property"><p>Проект:</p></div>
+                    <div class="modal-value">
+                        @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control", required = "required" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            @Html.Label("Файл оригинала")
-            <input type="file" name="newOriginalFile" />
-        </div>
+                <div class="modal-row">
+                    <div class="modal-property"><p>Файл оригинала:</p></div>
+                    <div class="modal-value">
+                        <input type="file" name="newOriginalFile" />
+                    </div>
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ProjectId, "Проект")
-            @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control", required = "required" })
-            @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
-        </div>
+                <div class="modal-row">
+                    <div class="modal-property"><p>Количество слов:</p></div>
+                    <div class="modal-value">
+                        @Html.EditorFor(model => model.WordsNumber, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                    </div>
+                </div>
+            </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.WordsNumber, "Количество слов")
-            @Html.EditorFor(model => model.WordsNumber, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-            @Html.ValidationMessageFor(model => model.WordsNumber, "", new { @class = "text-danger" })
-        </div>
-
-        <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
-    }
+            <!-- Подтверждение\отмена -->
+            <div class="modal-footer">
+                <input type="submit" value="Сохранить" class="btn hide-modal btn-modal btn-edit" />
+                <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
+            </div>
+        }
+    </div>
 </div>
