--- a/TranslationReg/Views/Projects/Project.cshtml
+++ b/TranslationReg/Views/Projects/Project.cshtml
@@ -181,6 +181,7 @@
 
         .works-table .inner-padding .properties {
             padding: 0 5px 0 5px;
+            background-color: #ffffff;
             background-color: #ffffffed;
         }
 
@@ -195,6 +196,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        background-color: #45295f;
         background-color: #45295fed;
         color: white;
     }
@@ -207,7 +209,8 @@
     .worktype-content {
         padding: 5px;
         margin: 0 8px;
-        background: #ffffff57;
+        background: #ffffff;
+        background: #ffffff94;
         box-shadow: 4px 3px 8px 1px rgba(0, 0, 0, 0.3);
         overflow: hidden;
         border-bottom-left-radius: 6px;
@@ -227,7 +230,7 @@
         }
 
             .worktype-content .works-table > .tableMaterial {
-                box-shadow: 2px 1px 4px 1px rgba(0, 0, 0, 0.3)
+                box-shadow: none;
             }
 
     .worktype-name {
