--- a/TranslationReg/Views/User_Stage/ListItemEdit.cshtml
+++ b/TranslationReg/Views/User_Stage/ListItemEdit.cshtml
@@ -7,7 +7,7 @@
             new { enctype = "multipart/form-data" }))
         {
             <!-- Хедер -->
-            <div class="modal-header edit-header">
+            <div class="modal-header blue-modal-header">
                 <h4 class="modal-title">Редактирование задачи</h4>
                 <p type="button" class="close" data-dismiss="modal">&times;</p>
             </div>
@@ -49,7 +49,7 @@
 
             <!-- Подтверждение\отмена -->
             <div class="modal-footer">
-                <input type="submit" value="Сохранить" class="btn btn-edit btn-modal hide-modal" />
+                <input type="submit" value="Сохранить" class="btn btn-modal-save btn-modal hide-modal" />
                 <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
             </div>
         }
