--- a/TranslationReg/Views/Documents/Edit.cshtml
+++ b/TranslationReg/Views/Documents/Edit.cshtml
@@ -13,7 +13,7 @@
             @Html.HiddenFor(model => model.Date)
 
             <!-- Хедер -->
-            <div class="modal-header  edit-header">
+            <div class="modal-header  blue-modal-header">
                 <h4 class="modal-title">Редактирование документа</h4>
                 <p type="button" class="close" data-dismiss="modal">&times;</p>
             </div>
@@ -60,7 +60,7 @@
 
             <!-- Подтверждение\отмена -->
             <div class="modal-footer">
-                <input type="submit" value="Сохранить" class="btn hide-modal btn-modal btn-edit" />
+                <input type="submit" value="Сохранить" class="btn hide-modal btn-modal btn-modal-save" />
                 <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
             </div>
         }
