--- a/TranslationReg/Views/User_Stage/AddResultFile.cshtml
+++ b/TranslationReg/Views/User_Stage/AddResultFile.cshtml
@@ -5,7 +5,7 @@
         @using (Html.BeginForm("AddResultFile", "User_Stage", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             <!-- Хедер -->
-            <div class="modal-header edit-header">
+            <div class="modal-header blue-modal-header">
                 <h4 class="modal-title">Выполнение задачи</h4>
                 <p type="button" class="close" data-dismiss="modal">&times;</p>
             </div>
@@ -27,7 +27,7 @@
 
             <!-- Подтверждение\отмена -->
             <div class="modal-footer">
-                <input type="submit" value="Сохранить" class="btn btn-edit btn-modal hide-modal" />
+                <input type="submit" value="Сохранить" class="btn btn-modal-save btn-modal hide-modal" />
                 <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
             </div>
         }
